changed href links to server routes

--- a/home.html
+++ b/home.html
@@ -22,8 +22,8 @@
             <p class="lead">Schedule a reservation at your convenience.</p>
             <hr class="my-4">
             <p>Book your seat before they're all gone!</p>
-            <a class="btn btn-primary btn-lg" href="reserve.html" role="button"><i class="far fa-calendar-check">Make Reservations</i></a>
-            <a class="btn btn-primary btn-lg" href="tables.html" role="button"><i class="fas fa-utensils">View Tables</i></a>
+            <a class="btn btn-primary btn-lg" href="./reserve" role="button"><i class="far fa-calendar-check">Make Reservations</i></a>
+            <a class="btn btn-primary btn-lg" href="./tables" role="button"><i class="fas fa-utensils">View Tables</i></a>
             
         </div>
 
