--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 
         <div>
             <p>
-                <a href="#">API Table Link</a> | <a href="#">API Wait List</a>
+                <a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a>
             </p>
         </div>
 
